--- a/styles/nav/nav.scss
+++ b/styles/nav/nav.scss
@@ -14,10 +14,7 @@ nav {
 nav a {
     text-decoration: none;
     margin-left: 3%;
-    color: black;
-    font-style: bold;
-
-
+    color: $primary_color;
 }
 
 .leftNav {
@@ -33,9 +30,13 @@ nav a {
 .logo {
     width: 19%;
     height: 60px;
-    border: 1px solid grey;
-    background-color: lightgray;
+    border: 1px solid gray;
+    background-color: $lightgray;
     color: gray;
     float: left;
     text-align: center;
+}
+
+.shoppingcart {
+    width: 20px;
 }
