--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -9,3 +9,7 @@ $topbar_height: 35px;
 
 $nav_height: 70px;
 $nav_links_width: 40%;
+
+$radiobutton_height: 25px;
+$radiobutton_width: 25px;
+$radiobutton_padding: 2px;
