--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,4 +63,112 @@ body {
   margin: 0;
 }
 
+.mainProduct {
+  margin: 0 auto;
+  max-height: 800px;
+  border-bottom: 1px solid black;
+  background-color: #d8d8d8;
+}
+
+.mainImg {
+  width: 50%;
+  max-height: 800px;
+}
+
+.mainInfo {
+  float: right;
+  width: 50%;
+}
+
+.newProduct {
+  background-color: #1c1c1f;
+  color: #ffffff;
+  width: 12%;
+  font-family: "abel";
+  text-align: center;
+  margin-top: 0;
+  display: inline-block;
+}
+
+.inStock {
+  color: #1c1c1f;
+  font-family: "abel";
+  margin-top: 0;
+  margin-right: 2%;
+  float: right;
+}
+
+.brand {
+  display: block;
+  margin: 0 auto;
+}
+
+.productInfo {
+  width: 80%;
+  border: 1px solid black;
+  margin: 0 auto;
+  text-align: center;
+  font-family: "abel";
+}
+
+.price {
+  font-weight: bold;
+}
+
+.container {
+  display: inline-block;
+  position: relative;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  font-weight: bold;
+  border: 0.5px solid #1c1c1f;
+  background-color: #ffffff;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  height: 0;
+  width: 0;
+}
+
+/* Create overlay */
+.selected {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+}
+
+/* On mouse-over, add a grey background color */
+.selected:hover {
+  background-color: #ccc;
+  opacity: 50%;
+}
+
+/* When the checkbox is checked, add a black background */
+.container input:checked ~ .selected {
+  background-color: #1c1c1f;
+  color: #ffffff;
+}
+
+.addToCart {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  background-color: #1c1c1f;
+  color: #ffffff;
+  font-family: "abel";
+  height: 25px;
+  width: 50%;
+  border: none;
+}
 /*# sourceMappingURL=styles.css.map */
