--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -5,6 +5,9 @@ $secondary_color: #ffffff;
 $lightgray: #d8d8d8;
 $button_color: #141527;
 
+$background_color: #f9f9f9;
+$mainproduct_max_height: 800px;
+
 $topbar_height: 35px;
 
 $nav_height: 70px;
@@ -13,3 +16,6 @@ $nav_links_width: 40%;
 $radiobutton_height: 25px;
 $radiobutton_width: 25px;
 $radiobutton_padding: 2px;
+
+$accordion_border: 1px solid $lightgray;
+$accordion_width: 90%;
