--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,15 +59,9 @@ nav a {
   width: 20px;
 }
 
-body {
-  margin: 0;
-}
-
 .mainProduct {
   margin: 0 auto;
   max-height: 800px;
-  border-bottom: 1px solid black;
-  background-color: #d8d8d8;
 }
 
 .mainImg {
@@ -105,7 +99,6 @@ body {
 
 .productInfo {
   width: 80%;
-  border: 1px solid black;
   margin: 0 auto;
   text-align: center;
   font-family: "abel";
@@ -115,6 +108,19 @@ body {
   font-weight: bold;
 }
 
+.addToCart {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  background-color: #1c1c1f;
+  color: #ffffff;
+  font-family: "abel";
+  height: 25px;
+  width: 50%;
+  border: none;
+}
+
+/*RADIOBUTTONS*/
 .container {
   display: inline-block;
   position: relative;
@@ -160,15 +166,58 @@ body {
   color: #ffffff;
 }
 
-.addToCart {
-  display: block;
-  margin: 0 auto;
-  margin-top: 10px;
-  background-color: #1c1c1f;
-  color: #ffffff;
+body {
+  margin: 0;
+  background-color: #f9f9f9;
+}
+
+.grayText {
+  color: #d8d8d8;
+}
+
+.collapsibleDiv {
+  width: 90%;
+  margin-left: 5%;
+}
+
+.collapsible {
+  background-color: #f9f9f9;
+  color: #d8d8d8;
   font-family: "abel";
-  height: 25px;
-  width: 50%;
+  font-size: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  width: 100%;
+  padding: 16px;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
   border: none;
+  border-bottom: 1px solid #d8d8d8;
+  border-top: 1px solid #d8d8d8;
+}
+
+.active, .collapsible:hover {
+  background-color: #141527;
+}
+
+.collapsible:after {
+  content: '\2C5';
+  color: #d8d8d8;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2C4";
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out;
 }
 /*# sourceMappingURL=styles.css.map */
