--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,4 +13,73 @@ body {
     color: $lightgray;
 }
 
+.leftTopCorner {
+    margin-top:0;
+    float: left;
+}
 
+.rightTopCorner {
+    margin-top:0;
+    float: right;
+    text-decoration: none;
+    color: $button_color;
+    margin-right: 2.5%;
+}
+
+.otherProductsDiv {
+    width: 80%;
+    margin: 200px auto;
+    font-family: $font;
+}
+
+.otherProductsContainer {
+    width: 100%;
+    float: left;
+}
+
+.otherProduct {
+    display: inline-block;
+    margin-right: 1.3%;
+    width: 23%;
+    text-align: center;
+    font-size: 12px;
+    position: relative;
+}
+
+.imgLable {
+    position: absolute;
+    font-size: 9px;
+    float: left;
+    background-color: $button_color;
+    color: white;
+    margin-top: 0;
+    padding: 5px;
+}
+.otherProductImg {
+    width: 100%;
+}
+
+.otherProductBrand {
+ font-weight: bold;
+}
+
+.otherProductName {
+ color: $lightgray;
+}
+
+.otherProductPrice {
+    font-weight: bold;
+}
+
+.lable {
+    float: left;
+}
+
+.strikethrough {
+    text-decoration: line-through;
+}
+
+.redText {
+    color: red;
+    font-weight: bold;
+}
