--- a/styles/mainProduct/mainProduct.css
+++ b/styles/mainProduct/mainProduct.css
@@ -11,6 +11,7 @@
 .mainInfo {
   float: right;
   width: 50%;
+  max-height: 800px;
 }
 
 .newProduct {
@@ -20,7 +21,6 @@
   font-family: "abel";
   text-align: center;
   margin-top: 0;
-  display: inline-block;
 }
 
 .inStock {
