--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,7 @@ nav a {
 .mainInfo {
   float: right;
   width: 50%;
+  max-height: 800px;
 }
 
 .newProduct {
@@ -81,7 +82,6 @@ nav a {
   font-family: "abel";
   text-align: center;
   margin-top: 0;
-  display: inline-block;
 }
 
 .inStock {
@@ -166,15 +166,6 @@ nav a {
   color: #ffffff;
 }
 
-body {
-  margin: 0;
-  background-color: #f9f9f9;
-}
-
-.grayText {
-  color: #d8d8d8;
-}
-
 .collapsibleDiv {
   width: 90%;
   margin-left: 5%;
@@ -219,5 +210,86 @@ body {
   overflow: hidden;
   -webkit-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
+}
+
+body {
+  margin: 0;
+  background-color: #f9f9f9;
+}
+
+.grayText {
+  color: #d8d8d8;
+}
+
+.leftTopCorner {
+  margin-top: 0;
+  float: left;
+}
+
+.rightTopCorner {
+  margin-top: 0;
+  float: right;
+  text-decoration: none;
+  color: #141527;
+  margin-right: 2.5%;
+}
+
+.otherProductsDiv {
+  width: 80%;
+  margin: 200px auto;
+  font-family: "abel";
+}
+
+.otherProductsContainer {
+  width: 100%;
+  float: left;
+}
+
+.otherProduct {
+  display: inline-block;
+  margin-right: 1.3%;
+  width: 23%;
+  text-align: center;
+  font-size: 12px;
+  position: relative;
+}
+
+.imgLable {
+  position: absolute;
+  font-size: 9px;
+  float: left;
+  background-color: #141527;
+  color: white;
+  margin-top: 0;
+  padding: 5px;
+}
+
+.otherProductImg {
+  width: 100%;
+}
+
+.otherProductBrand {
+  font-weight: bold;
+}
+
+.otherProductName {
+  color: #d8d8d8;
+}
+
+.otherProductPrice {
+  font-weight: bold;
+}
+
+.lable {
+  float: left;
+}
+
+.strikethrough {
+  text-decoration: line-through;
+}
+
+.redText {
+  color: red;
+  font-weight: bold;
 }
 /*# sourceMappingURL=styles.css.map */
