--- a/styles/variables/variables.scss
+++ b/styles/variables/variables.scss
@@ -19,3 +19,8 @@ $radiobutton_padding: 2px;
 
 $accordion_border: 1px solid $lightgray;
 $accordion_width: 90%;
+
+$bottom_width: 80%;
+
+$socialmedia_button_height: 35px;
+$socialmedia_div_height: 75px;
