--- a/styles/nav/nav.scss
+++ b/styles/nav/nav.scss
@@ -1,2 +1,42 @@
 @import '../variables/variables';
 
+nav {
+    height: 70px;
+    width: 100%;
+    line-height: $nav_height;
+    font-family: $font;
+    display: inline-block;
+    text-align: center;
+    border-bottom: 2px solid lightgray;
+
+}
+
+nav a {
+    text-decoration: none;
+    margin-left: 3%;
+    color: $primary_color;
+}
+
+.leftNav {
+    float:left;
+    width: $nav_links_width;
+}
+
+.rightNav {
+    width: $nav_links_width;
+    float: left;
+}
+
+.logo {
+    width: 19%;
+    height: 60px;
+    border: 1px solid gray;
+    background-color: $lightgray;
+    color: gray;
+    float: left;
+    text-align: center;
+}
+
+.shoppingcart {
+    width: 20px;
+}
