--- a/styles/socialmedia/socialmedia.css
+++ b/styles/socialmedia/socialmedia.css
@@ -2,11 +2,8 @@
   float: left;
 }
 
-.center {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+.middle {
+  margin-left: 4.5%;
 }
 
 .right {
@@ -31,7 +28,7 @@
   text-decoration: none;
   text-align: center;
   border: 2px solid #141527;
-  width: 250px;
+  width: 30%;
   height: 35px;
   line-height: 35px;
   color: #141527;
