--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,6 +82,7 @@ nav a {
   font-family: "abel";
   text-align: center;
   margin-top: 0;
+  display: inline-block;
 }
 
 .inStock {
@@ -298,26 +299,26 @@ nav a {
 }
 
 .newsletter img {
-  width: 100%;
+  max-width: 100%;
 }
 
 .newsletterTextDiv {
   position: absolute;
   bottom: 15%;
-  left: 20%;
+  left: 5%;
   color: white;
   font-family: "abel";
   text-align: center;
-  width: 25%;
+  width: 40%;
 }
 
 .newsletterHeader {
-  font-size: 36px;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
 .newsletterText {
-  font-size: 18px;
+  font-size: 1em;
 }
 
 .emailDiv {
@@ -340,9 +341,9 @@ nav a {
   background-color: #141527;
   color: white;
   width: 35%;
-  height: 100%;
+  height: 120%;
   border: none;
-  margin-left: -3px;
+  margin-left: -1.5%;
 }
 
 .left {
@@ -442,9 +443,76 @@ nav a {
   font-weight: bold;
 }
 
+@media screen and (max-width: 768px) {
+  .otherProductsContainer {
+    margin-top: 5%;
+  }
+  .newsletterTextDiv {
+    height: 130px;
+  }
+  .emailButton, .email {
+    font-size: 9px;
+  }
+  /* MainProduct */
+  .mainInfo {
+    font-size: 12px;
+  }
+  .productInfo {
+    width: 100%;
+  }
+  .topInfo {
+    display: block;
+    height: 50px;
+  }
+  .brand {
+    float: left;
+    margin-left: 10%;
+  }
+  .articleName {
+    width: 50%;
+    float: right;
+  }
+  .price {
+    width: 100%;
+  }
+  .sizeContainer {
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+    display: inline-block;
+    height: 30px;
+  }
+  .size {
+    width: 30%;
+    display: inline-block;
+    position: absolute;
+    top: -5px;
+    left: 5px;
+  }
+  .radioButtonDiv {
+    width: 30%;
+    display: inline-block;
+  }
+  .addToCart {
+    width: 30%;
+    display: inline-block;
+    position: absolute;
+    top: -9px;
+    right: 3;
+  }
+}
+
 body {
   margin: 0 auto;
   background-color: #f9f9f9;
   max-width: 1200px;
 }
+
+@media screen and (max-width: 414px) {
+  body {
+    font-size: 12px;
+  }
+}
+
+/* ---------------- HERE ---------------- */
 /*# sourceMappingURL=styles.css.map */
