--- a/styles/newsletter/newsletter.css
+++ b/styles/newsletter/newsletter.css
@@ -5,26 +5,26 @@
 }
 
 .newsletter img {
-  width: 100%;
+  max-width: 100%;
 }
 
 .newsletterTextDiv {
   position: absolute;
   bottom: 15%;
-  left: 20%;
+  left: 5%;
   color: white;
   font-family: "abel";
   text-align: center;
-  width: 25%;
+  width: 40%;
 }
 
 .newsletterHeader {
-  font-size: 36px;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
 .newsletterText {
-  font-size: 18px;
+  font-size: 1em;
 }
 
 .emailDiv {
@@ -47,8 +47,8 @@
   background-color: #141527;
   color: white;
   width: 35%;
-  height: 100%;
+  height: 120%;
   border: none;
-  margin-left: -3px;
+  margin-left: -1.5%;
 }
 /*# sourceMappingURL=newsletter.css.map */
