--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './socialmedia/socialmedia';
 @import './footer/footer';
 @import './media/768';
+@import './media/414';
 
 
 body {
@@ -16,13 +17,7 @@ body {
     max-width: 1200px;
 }
 
-@media screen and (max-width:414px){
-    body {
-        font-size: 12px;
-    }
-}
 
 
-/* ---------------- HERE ---------------- */
 
 
